# latsi

./: LisezMoi.txt  README.md  dune
src/: ast.ml  dune  interpret.ml  lexer.mll  main.ml  parser.mly  parserMessages.messages
tests/: assign.ls  assign_err  blocs  operations  parse.ls  parse.ml  routine  routine_err  test  test_imprime  test_nl  test_numero  test_plusieurs_lignes  test_vavers
